@@ -45,10 +45,22 @@ func TestFetch(t *testing.T) {
 			assert.NoError(t, err)
 
 			server := httptest.NewServer(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-				w.WriteHeader(200)
-				w.Header().Set("Content-Type", "application/json;")
-				w.Write([]byte(response))
-				assert.Equal(t, "/_nodes/_local", r.RequestURI)
+				switch r.RequestURI {
+				case "/_nodes/_local":
+					w.WriteHeader(200)
+					w.Header().Set("Content-Type", "application/json;")
+					w.Write([]byte(response))
+
+				case "/":
+					rootResponse := "{\"cluster_name\":\"es1\",\"cluster_uuid\":\"4heb1eiady103dxu71\",\"version\":{\"number\":\"7.0.0\"}}"
+					w.WriteHeader(200)
+					w.Header().Set("Content-Type", "application/json")
+					w.Write([]byte(rootResponse))
+
+				default:
+					t.FailNow()
+				}
+
 			}))
 			defer server.Close()
 
